finished hero section desktop version

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>W. Cody | Portfolio</title>
 </head>
 <body>
@@ -21,6 +23,31 @@
     </header>
 
 
+    <div class="hero-section">
+
+        <div class="portrait">
+            <img src="./Resources/Images/SelfiePNG.png" alt="self portrait">
+        </div>
+
+        <div class="introduction">
+            <h4>Hello, I'm</h4>
+            <h1>W. Cody Yonkin</h1>
+            <h2>Frontend Developer</h2>
+
+            <div class="intro-btns">
+                <button class="intro-btn intro-btn-1">Download CV</button>
+                <button class="intro-btn intro-btn-2">Contact Info</button>
+            </div>
+
+            <div class="socials-btns">
+                <ul>
+                    <a href="https://www.linkedin.com/in/wilcoyonkin" target="_blank"><li class="fa fa-linkedin-square" style="font-size: 2.5rem"></li></a>
+                    <a href="https://github.com/WilCoYo/PortfolioHomepage.git" target="_blank"><li class="fa fa-github" style="font-size: 2.5rem"></li></a>
+                </ul>
+            </div>
+        </div>
+        
+    </div>
 
 
 </body>
