working on about me section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </header>
 
 
+
+    <!-- Hero Section -->
+
     <div class="hero-section">
 
         <div class="portrait">
@@ -34,6 +37,8 @@
             <h1>W. Cody Yonkin</h1>
             <h2>Frontend Developer</h2>
 
+        <!-- Buttons  -->
+
             <div class="intro-btns">
                 <button class="intro-btn intro-btn-1">Download CV</button>
                 <button class="intro-btn intro-btn-2">Contact Info</button>
@@ -42,11 +47,44 @@
             <div class="socials-btns">
                 <ul>
                     <a href="https://www.linkedin.com/in/wilcoyonkin" target="_blank"><li class="fa fa-linkedin-square" style="font-size: 2.5rem"></li></a>
-                    <a href="https://github.com/WilCoYo/PortfolioHomepage.git" target="_blank"><li class="fa fa-github" style="font-size: 2.5rem"></li></a>
+                    <a href="https://github.com/WilCoYo?tab=repositories" target="_blank"><li class="fa fa-github" style="font-size: 2.5rem"></li></a>
                 </ul>
             </div>
+
         </div>
         
+    </div>
+
+
+    <div class="grid-container" >
+
+        <!-- Row 1 -->
+
+        <div class="about-me-header">
+            <h4>Get To Know Me</h4>
+            <h2>About Me</h2>
+        </div>
+<!-- 
+        <div class="codecademy-cert">
+            <img src="./Resources/Images/CodecademyCert.png">
+        </div> -->
+
+        <div class="certifications">
+            <h4>Experience</h4>
+            <ul>
+                <li>Example</li>
+                <li>Example</li>
+                <li>Example</li>
+            </ul>
+        </div>
+
+        <div class="experience">
+
+        </div>
+
+
+
+
     </div>
 
 
