worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="project project-1">
             <div class="project-1-image">
                 <img src="./Resources/Images/Hi-Fi Logo.png" alt="Hi-Fi Wine and Spirits Logo">
-                <h3>Hi-Fi<br> Wine & Spirits Website</h3>
+                <h3>Hi-Fi<br> Wine & Spirits</h3>
                 <div class="project-btns">
                     <a href="https://github.com/WilCoYo/Hi-Fi-Wine-and-Spirits.git" target="_blank"><button class="project-btn project-btn-1">GitHub</button></a>
                     <a href="https://hi-fi-wineandspirits.netlify.app" target="_blank"><button class="project-btn project-btn-2">Live Demo</button></a>
