troubleshooting functionality of about me tab

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 About Me
             </button>
 
-            <button onclick="certificationsButton();" class="certifications-toggle toggle-btns" id="certifications-toggle" type="button">
+            <!-- <button onclick="certificationsButton();" class="certifications-toggle toggle-btns" id="certifications-toggle" type="button">
                 Certifications
-            </button>
+            </button> -->
     
 
         </div>
