working on side panel functionality

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
        
-        <div class="about-me slide-panels" id="about-me" style="visibility:hidden">
+        <div class="about-me slide-panels" id="about-me" style="visibility:visible">
             <p class="about-me-content" style="display:none"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
@@ -80,7 +80,7 @@
                 deserunt mollit anim id est laborum.
             </p>
         </div>
-        <div class="certifications slide-panels" id="certifications" style="visibility:hidden">
+        <div class="certifications slide-panels" id="certifications" style="visibility:visible">
             
             <p class="certifications-content" style="display:none"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
